tabletop-tracker/main/default/objects/Session__c/fields/Agenda__c.field-meta.xml
<CustomField>
    <fullName>Agenda__c</fullName>
    <description>Agenda for what to accomplish during the session</description>
    <label>Agenda</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>