tabletop-tracker/main/default/objects/Session__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>The location in which the session took place</description>
    <label>Location</label>
    <type>Address</type>
</CustomField>