tabletop-tracker/main/default/objects/Session__c/fields/VOD__c.field-meta.xml
<CustomField>
    <fullName>VOD__c</fullName>
    <label>VOD</label>
    <type>Url</type>
</CustomField>